fix: :bug: layouts navigation links

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -16,21 +16,22 @@
     </button>
 
     <div class="mx-7 flex gap-8">
-      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" href="index.html">Home</a>
+      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" routerLink="/">Home</a>
       <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline"
         href="catalog.html">Catalog</a>
-      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" href="about-us.html">About
+      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" routerLink="about-us">About
         Us</a>
-      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" href="contact-us.html">Contact
+      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline"
+        routerLink="contact-us">Contact
         Us</a>
     </div>
 
     <div class="ml-auto flex gap-4 px-5">
-      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" href="login.html">Login</a>
+      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" routerLink="login">Login</a>
 
       <span class="text-white">&#124;</span>
 
-      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" href="sign-up.html">Sign
+      <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" routerLink="signup">Sign
         Up</a>
     </div>
   </div>
