fix: :bug: the catalog layout navigation link

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
     <div class="mx-7 flex gap-8">
       <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" routerLink="/">Home</a>
       <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline"
-        href="catalog.html">Catalog</a>
+        routerLink="catalog">Catalog</a>
       <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline" routerLink="about-us">About
         Us</a>
       <a class="font-light text-white duration-100 hover:text-yellow-400 hover:underline"
