feat: minor changes in the form css

--- a/client/src/app/layouts/reset-password/reset-password.component.html
+++ b/client/src/app/layouts/reset-password/reset-password.component.html
@@ -5,7 +5,11 @@
       <p class="text-l text-center">Please enter your new password.</p>
     </div>
 
-    <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()">
+    <form
+      class="mt-6 flex flex-col"
+      [formGroup]="resetPasswordForm"
+      (ngSubmit)="onSubmit()"
+    >
       <label for="password">New Password</label>
       <input
         formControlName="password"
@@ -15,7 +19,6 @@
         placeholder="New password"
         required
       />
-
       <label for="passwordConfirm">Confirm New Password</label>
       <input
         formControlName="passwordConfirm"
