--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <header class="mx-auto flex h-16 max-w-[1200px] items-center justify-between px-5">
-  <a href="index.html">
+  <a routerLink="/">
     <img class="cursor-pointer sm:h-auto sm:w-auto" src="../assets/images/company-logo.svg" alt="company logo" />
   </a>
 
@@ -123,10 +123,10 @@
       </button>
     </form>
     <ul class="text-center font-medium">
-      <li class="py-2"><a href="index.html">Home</a></li>
-      <li class="py-2"><a href="catalog.html">Catalog</a></li>
-      <li class="py-2"><a href="about-us.html">About Us</a></li>
-      <li class="py-2"><a href="contact-us.html">Contact Us</a></li>
+      <li class="py-2"><a (click)="closeMenu()" routerLink="/">Home</a></li>
+      <li class="py-2"><a (click)="closeMenu()" routerLink="/catalog">Catalog</a></li>
+      <li class="py-2"><a (click)="closeMenu()" routerLink="/about-us">About Us</a></li>
+      <li class="py-2"><a (click)="closeMenu()" routerLink="/contact-us">Contact Us</a></li>
     </ul>
   </div>
 </section>
