refactor: :recycle: file structure and add new components and services

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -30,7 +30,7 @@
   </form>
 
   <div class="hidden gap-3 md:!flex">
-    <a href="wishlist.html" class="flex cursor-pointer flex-col items-center justify-center">
+    <a routerLink="profile/wishlist" class="flex cursor-pointer flex-col items-center justify-center">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="h-6 w-6">
         <path stroke-linecap="round" stroke-linejoin="round"
@@ -50,7 +50,7 @@
       <p class="text-xs">Cart</p>
     </a>
 
-    <a href="account-page.html" class="relative flex cursor-pointer flex-col items-center justify-center">
+    <a routerLink="/profile/information" class="relative flex cursor-pointer flex-col items-center justify-center">
       <span class="absolute bottom-[33px] right-1 flex h-2 w-2">
         <span class="absolute inline-flex h-full w-full animate-ping rounded-full bg-red-400 opacity-75"></span>
         <span class="relative inline-flex h-2 w-2 rounded-full bg-red-500"></span>
