fix: image paths in payment and review components to use relative paths

--- a/client/src/app/components/check-out/payment/payment.component.html
+++ b/client/src/app/components/check-out/payment/payment.component.html
@@ -47,27 +47,27 @@
     <section class="grid grid-cols-3 gap-4 my-4 lg:grid-cols-5 w-fit">
       <img
         class="cursor-pointer w-[100px]"
-        src="/payment-method-bitcoin.0e627672.svg"
+        src="./assets/images/payment-method-bitcoin.svg"
         alt="bitcoin icon"
       />
       <img
         class="cursor-pointer w-[100px]"
-        src="/payment-method-paypal.127037a2.svg"
+        src="./assets/images/payment-method-paypal.svg"
         alt="paypal icon"
       />
       <img
         class="cursor-pointer w-[100px]"
-        src="/payment-method-stripe.2ea49158.svg"
+        src="./assets/images/payment-method-stripe.svg"
         alt="stripe icon"
       />
       <img
         class="cursor-pointer w-[100px]"
-        src="/payment-method-visa.d3817c78.svg"
+        src="./assets/images/payment-method-visa.svg"
         alt="visa icon"
       />
       <img
         class="cursor-pointer w-[100px]"
-        src="/payment-method-mastercard.e6ae8d8d.svg"
+        src="./assets/images/payment-method-mastercard.svg"
         alt="mastercard icon"
       />
     </section>
