--- a/client/src/app/components/check-out/review/review.component.html
+++ b/client/src/app/components/check-out/review/review.component.html
@@ -13,7 +13,7 @@
         <div class="flex">
           <img
             class="w-[90px]"
-            src="/bedroom.ff2259bc.png"
+            src="./assets/images/bedroom.png"
             alt="bedroom image"
           />
           <div class="flex flex-col justify-center ml-3">
@@ -31,7 +31,7 @@
         <div class="flex">
           <img
             class="w-[90px]"
-            src="/product-chair.43cea4c5.png"
+            src="./assets/images/product-chair.png"
             alt="Chair Image"
           />
           <div class="flex flex-col justify-center ml-3">
@@ -49,7 +49,7 @@
         <div class="flex">
           <img
             class="w-[90px]"
-            src="/outdoors.1cb064f8.png"
+            src="./assets/images/outdoors.png"
             alt="Outdoor furniture"
           />
           <div class="flex flex-col justify-center ml-3">
@@ -67,7 +67,7 @@
         <div class="flex">
           <img
             class="w-[90px]"
-            src="/matrass.244c24b1.png"
+            src="./assets/images/matrass.png"
             alt="Matrass Image"
           />
           <div class="flex flex-col justify-center ml-3">
