refactor: Makes Previous step buttom disappear when on step one

--- a/client/src/app/components/check-out/check-out.component.html
+++ b/client/src/app/components/check-out/check-out.component.html
@@ -44,14 +44,10 @@
           <a
             (click)="prevStep()"
             class="px-4 py-2 text-white bg-purple-900"
-            ngClass="{ 'hidden': currentStep === 1 }"
+            [ngClass]="{ hidden: currentStep === 1 }"
             >Previous step</a
           >
-          <a
-            (click)="nextStep()"
-            class="px-4 py-2 text-white bg-amber-400"
-            ngClass="{ 'hidden': currentStep === 4 }"
-          >
+          <a (click)="nextStep()" class="px-4 py-2 text-white bg-amber-400">
             {{ currentStep === 4 ? "Place Order" : "Next Step" }}
           </a>
         </div>
