--- a/client/src/app/layouts/profile/profile.component.html
+++ b/client/src/app/layouts/profile/profile.component.html
@@ -1,32 +1,6 @@
-<section>
-  <!-- breadcrumbs  -->
-
-  <nav class="mx-auto w-full mt-4 max-w-[1200px] px-5">
-    <ul class="flex items-center">
-      <li class="cursor-pointer">
-        <a href="index.html">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-5 w-5">
-            <path
-              d="M11.47 3.84a.75.75 0 011.06 0l8.69 8.69a.75.75 0 101.06-1.06l-8.689-8.69a2.25 2.25 0 00-3.182 0l-8.69 8.69a.75.75 0 001.061 1.06l8.69-8.69z" />
-            <path
-              d="M12 5.432l8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 01-.75-.75v-4.5a.75.75 0 00-.75-.75h-3a.75.75 0 00-.75.75V21a.75.75 0 01-.75.75H5.625a1.875 1.875 0 01-1.875-1.875v-6.198a2.29 2.29 0 00.091-.086L12 5.43z" />
-          </svg>
-        </a>
-      </li>
-      <li>
-        <span class="mx-2 text-gray-500">&gt;</span>
-      </li>
-
-      <li class="text-gray-500">My Wishlist</li>
-    </ul>
-  </nav>
-  <!-- /breadcrumbs  -->
-</section>
-
-
 <section class="container flex-grow mx-auto max-w-[1200px] border-b py-5 lg:flex lg:flex-row lg:py-10">
   <!-- sidebar  -->
-  <section class="hidden w-[300px] flex-shrink-0 px-4 lg:block">
+  <section class="hidden flex-shrink-0 px-4 lg:block">
     <div class="border-b py-5">
       <div class="flex items-center">
         <img width="40px" height="40px" class="rounded-full object-cover" src="./assets/images/avatar-photo.png"
@@ -42,14 +16,15 @@
       <div class="w-full">
         <div class="flex w-full">
           <div class="flex flex-col gap-2">
-            <a href="account-page.html" class="flex items-center gap-2 font-medium">
+            <a href="account-page.html" class="flex items-center gap-2 font-medium active:text-violet-900">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="h-5 w-5">
                 <path stroke-linecap="round" stroke-linejoin="round"
                   d="M15 9h3.75M15 12h3.75M15 15h3.75M4.5 19.5h15a2.25 2.25 0 002.25-2.25V6.75A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25v10.5A2.25 2.25 0 004.5 19.5zm6-10.125a1.875 1.875 0 11-3.75 0 1.875 1.875 0 013.75 0zm1.294 6.336a6.721 6.721 0 01-3.17.789 6.721 6.721 0 01-3.168-.789 3.376 3.376 0 016.338 0z" />
               </svg>
               Manage account</a>
-            <a href="profile-information.html" class="text-violet-900 duration-100">Profile information</a>
+            <a href="profile-information.html" class="text-gray-500 duration-100 hover:text-yellow-400">Profile
+              information</a>
             <a href="manage-address.html" class="text-gray-500 duration-100 hover:text-yellow-400">Manage Addresses</a>
             <a href="change-password.html" class="text-gray-500 duration-100 hover:text-yellow-400">Change password</a>
           </div>
@@ -92,7 +67,7 @@
     <div class="flex border-b py-5">
       <div class="flex w-full">
         <div class="flex flex-col gap-2">
-          <a href="wishlist.html" class="flex items-center gap-2 font-medium active:text-violet-900">
+          <a href="wishlist.html" class="flex items-center gap-2 font-medium text-violet-900">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="h-5 w-5">
               <path stroke-linecap="round" stroke-linejoin="round"
@@ -120,8 +95,24 @@
     </div>
   </section>
   <!-- /sidebar  -->
-  <section class="grid w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10">
-    <router-outlet></router-outlet>
-  </section>
+
+  <!-- option cards  -->
+
+  <div class="mb-5 flex items-center justify-between px-5 lg:hidden">
+    <div class="flex gap-3">
+      <div class="py-5">
+        <div class="flex items-center">
+          <img width="40px" height="40px" class="rounded-full object-cover" src="./assets/images/avatar-photo.png"
+            alt="Red woman portrait" />
+          <div class="ml-5">
+            <p class="font-medium text-gray-500">Hello,</p>
+            <p class="font-bold">Sarah Johnson</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <router-outlet></router-outlet>
 
 </section>
