--- a/client/src/app/components/delivery/delivery.component.html
+++ b/client/src/app/components/delivery/delivery.component.html
@@ -3,7 +3,11 @@
     <div class="flex justify-between w-full gap-2">
       <div class="flex flex-col w-full border cursor-pointer">
         <div class="flex px-4 py-2 bg-amber-400">
-          <input class="outline-yellow-400" type="radio" />
+          <input
+            class="outline-yellow-400"
+            type="radio"
+            (change)="isChecked.emit(true)"
+          />
           <p class="ml-3 font-bold">DHL, next day</p>
         </div>
         <div class="px-4 py-3">
@@ -18,7 +22,11 @@
     </div>
     <div class="flex flex-col w-full border cursor-pointer">
       <div class="flex px-4 py-2 bg-amber-400">
-        <input class="outline-yellow-400" type="radio" />
+        <input
+          class="outline-yellow-400"
+          type="radio"
+          (change)="isChecked.emit(true)"
+        />
         <p class="ml-3 font-bold cursor-pointer">SDEK, 3 hours</p>
       </div>
       <div class="px-4 py-3">
@@ -32,7 +40,11 @@
     </div>
     <div class="flex flex-col w-full border cursor-pointer">
       <div class="flex px-4 py-2 bg-amber-400">
-        <input class="outline-yellow-400" type="radio" />
+        <input
+          class="outline-yellow-400"
+          type="radio"
+          (change)="isChecked.emit(true)"
+        />
         <p class="ml-3 font-bold">UPS, Secure Delivery</p>
       </div>
       <div class="px-4 py-3 cursor-pointer">
@@ -46,7 +58,11 @@
     </div>
     <div class="flex flex-col w-full border cursor-pointer">
       <div class="flex px-4 py-2 bg-amber-400">
-        <input class="outline-yellow-400" type="radio" />
+        <input
+          class="outline-yellow-400"
+          type="radio"
+          (change)="isChecked.emit(true)"
+        />
         <p class="ml-3 font-bold">Pochta Rossii, 12 years</p>
       </div>
       <div class="px-4 py-3 cursor-pointer">
