--- a/client/src/app/components/payment/payment.component.html
+++ b/client/src/app/components/payment/payment.component.html
@@ -6,6 +6,7 @@
         x-mask="9999 9999 9999 9999"
         class="w-full px-4 py-2 border lg:w-1/2"
         placeholder="1223 4568 7644 4839"
+        (change)="setCardHolder($event)"
       />
     </div>
     <div class="flex flex-col w-full">
@@ -14,6 +15,7 @@
         class="w-full px-4 py-2 border lg:w-1/2"
         type="text"
         placeholder="SARAH JOHNSON"
+        (change)="setCardNumber($event)"
       />
     </div>
     <div class="flex items-center gap-5 lg:w-1/2">
@@ -24,12 +26,14 @@
             x-mask="99"
             class="w-1/2 px-4 py-2 text-center border"
             placeholder="10"
+            (change)="setExpirationDate($event)"
           />
           <span>\</span>
           <input
             x-mask="99"
             class="w-1/2 px-4 py-2 text-center border"
             placeholder="36"
+            (change)="setExpirationDate($event)"
           />
         </div>
       </div>
@@ -40,6 +44,7 @@
           class="w-full py-2 text-center border lg:w-1/2"
           type="password"
           placeholder="•••"
+          (change)="setCvv($event)"
         />
       </div>
     </div>
