--- a/client/src/app/components/review/review.component.html
+++ b/client/src/app/components/review/review.component.html
@@ -8,77 +8,24 @@
     </tr>
   </thead>
   <tbody>
-    <tr class="border-b h-[100px]">
-      <td class="align-middle">
-        <div class="flex">
-          <img
-            class="w-[90px]"
-            src="./assets/images/bedroom.png"
-            alt="bedroom image"
-          />
-          <div class="flex flex-col justify-center ml-3">
-            <p class="text-xl font-bold">ITALIAN BED</p>
-            <p class="text-sm text-gray-400">Size: XL</p>
+    <ng-container *ngFor="let product of products">
+      <tr class="border-b h-[100px]">
+        <td class="align-middle">
+          <div class="flex">
+            <img
+              class="w-[90px]"
+              [src]="product.images[0]"
+              alt="bedroom image"
+            />
+            <div class="flex flex-col justify-center ml-3">
+              <p class="text-xl font-bold">{{ product.name }}</p>
+            </div>
           </div>
-        </div>
-      </td>
-      <td class="mx-auto text-center">$320</td>
-      <td class="text-center align-middle">1</td>
-      <td class="mx-auto text-center">$320</td>
-    </tr>
-    <tr class="border-b h-[100px]">
-      <td class="align-middle">
-        <div class="flex">
-          <img
-            class="w-[90px]"
-            src="./assets/images/product-chair.png"
-            alt="Chair Image"
-          />
-          <div class="flex flex-col justify-center ml-3">
-            <p class="text-xl font-bold">GUYER CHAIR</p>
-            <p class="text-sm text-gray-400">Size: XL</p>
-          </div>
-        </div>
-      </td>
-      <td class="mx-auto text-center">$320</td>
-      <td class="text-center align-middle">1</td>
-      <td class="mx-auto text-center">$320</td>
-    </tr>
-    <tr class="border-b h-[100px]">
-      <td class="align-middle">
-        <div class="flex">
-          <img
-            class="w-[90px]"
-            src="./assets/images/outdoors.png"
-            alt="Outdoor furniture"
-          />
-          <div class="flex flex-col justify-center ml-3">
-            <p class="text-xl font-bold">OUTDOOR CHAIR</p>
-            <p class="text-sm text-gray-400">Size: XL</p>
-          </div>
-        </div>
-      </td>
-      <td class="mx-auto text-center">$320</td>
-      <td class="text-center align-middle">1</td>
-      <td class="mx-auto text-center">$320</td>
-    </tr>
-    <tr class="h-[100px]">
-      <td class="align-middle">
-        <div class="flex">
-          <img
-            class="w-[90px]"
-            src="./assets/images/matrass.png"
-            alt="Matrass Image"
-          />
-          <div class="flex flex-col justify-center ml-3">
-            <p class="text-xl font-bold">MATRASS COMFORT +</p>
-            <p class="text-sm text-gray-400">Size: XL</p>
-          </div>
-        </div>
-      </td>
-      <td class="mx-auto text-center">$320</td>
-      <td class="text-center align-middle">1</td>
-      <td class="mx-auto text-center">$320</td>
-    </tr>
+        </td>
+        <td class="mx-auto text-center">{{ product.price }}</td>
+        <td class="text-center align-middle">{{ product.count }}</td>
+        <td class="mx-auto text-center">{{ product.price * product.count }}</td>
+      </tr>
+    </ng-container>
   </tbody>
 </table>
