--- a/client/src/app/layouts/check-out/check-out.component.html
+++ b/client/src/app/layouts/check-out/check-out.component.html
@@ -31,13 +31,18 @@
         ></app-address>
       </ng-container>
       <ng-container *ngIf="currentStep === 2">
-        <app-delivery></app-delivery>
+        <app-delivery (isChecked)="setIsCheck($event)"></app-delivery>
       </ng-container>
       <ng-container *ngIf="currentStep === 3">
-        <app-payment></app-payment>
+        <app-payment
+          (cardHolder)="setCardHolder($event)"
+          (cardNumber)="setCardNumber($event)"
+          (expirationDate)="setExpirationDate($event)"
+          (cvv)="setCvv($event)"
+        ></app-payment>
       </ng-container>
       <ng-container *ngIf="currentStep === 4">
-        <app-review></app-review>
+        <app-review [products]="cart"></app-review>
       </ng-container>
 
       <div class="flex items-center justify-between w-full">
@@ -66,7 +71,7 @@
 
           <div class="flex justify-between py-5 border-b">
             <p>Subtotal</p>
-            <p>$1280</p>
+            <p>{{ order.totalPrice }}</p>
           </div>
 
           <div class="flex justify-between py-5 border-b">
@@ -76,7 +81,7 @@
 
           <div class="flex justify-between py-5">
             <p>Total</p>
-            <p>$1280</p>
+            <p>{{ order.totalPrice }}</p>
           </div>
         </div>
       </div>
