--- a/client/src/app/components/review/review.component.html
+++ b/client/src/app/components/review/review.component.html
@@ -12,11 +12,7 @@
       <tr class="border-b h-[100px]">
         <td class="align-middle">
           <div class="flex">
-            <img
-              class="w-[90px]"
-              [src]="product.images[0]"
-              alt="bedroom image"
-            />
+            <img class="w-[90px]" [src]="product.image" alt="bedroom image" />
             <div class="flex flex-col justify-center ml-3">
               <p class="text-xl font-bold">{{ product.name }}</p>
             </div>
