--- a/client/src/app/layouts/product-overview/product-overview.component.html
+++ b/client/src/app/layouts/product-overview/product-overview.component.html
@@ -166,8 +166,9 @@
     </div>
 
     <div class="mt-7 flex flex-row items-center gap-6">
-      <button
-        class="flex h-12 w-1/3 items-center justify-center bg-violet-900 text-white duration-100 hover:bg-blue-800">
+      <button (click)="addToCart()"
+        class="flex h-12 w-1/3 items-center justify-center bg-violet-900 text-white duration-100 hover:bg-blue-800"
+        [disabled]="product?.stock">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
           class="mr-3 h-4 w-4">
           <path stroke-linecap="round" stroke-linejoin="round"
